# zephyr_udp

./: CMakeLists.txt  Kconfig  README.md  nrf9160dk_nrf9160ns.overlay  prj.conf
src/: UART_handler.c  UART_handler.h  mainMod.c  uart.c  uart_entry.h  udp.c  udp.h
